--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <section class="menu">
-        <div class="menuNext">
+    <section class="menu addClass">
+        <div class="menuNext ">
             <div class="left_header">
 
                 <img id="logo" src="../images/logo.svg" alt="logo">
@@ -27,44 +27,49 @@
             <div class="categories">
                 <h1 class="h1">Категории</h1>
                 <div class="subcategory">
-                    <div><img class="ico" src="../images/home.svg" alt="home"> Дом</div>
+                    <img class="ico imgMoon" src="../images/home.svg" alt="home">
+                    <div class="pAdd">Дом</div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <div><img class="ico" src="../images/users.svg" alt="users"> Семья</div>
+                    <img class="ico imgMoon" src="../images/users.svg" alt="users">
+                    <div class="pAdd"> Семья</div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <div><img class="ico" src="../images/briefcase.svg" alt="briefcase"> Работа</div>
+                    <img class="ico imgMoon" src="../images/briefcase.svg" alt="briefcase">
+                    <div class="pAdd "> Работа </div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <div><img class="ico" src="../images/zap.svg" alt="zap"> Спорт</div>
+                    <img class="ico imgMoon" src="../images/zap.svg" alt="zap">
+                    <div class="pAdd ">Спорт </div>
+
                     <p class="illumination"></p>
                 </div>
 
                 <div class="addition">
-                    <img class="ico1" src="../images/plus-square.svg" alt="plus-square">
-                    <div>Добавить</div>
+                    <img class="ico1 " src="../images/plus-square.svg" alt="plus-square">
+                    <div class="">Добавить</div>
 
                 </div>
             </div>
 
             <div class="data">
-                <h1 class="h_1">Данные</h1>
+                <h1 class="h_1 ">Данные</h1>
 
                 <div class="data1 data2">
-                    <img class="ico2" src="../images/bar-chart-2.svg" alt="bar-chart-2">
-                    <div>Статистика</div>
+                    <img class="ico2 imgMoon" src="../images/bar-chart-2.svg" alt="bar-chart-2">
+                    <div class=" pAdd">Статистика</div>
 
                 </div>
 
                 <div class="data1">
-                    <img class="ico2" src="../images/trending-up.svg" alt="trending-up">
-                    <div>Сравнить</div>
+                    <img class="ico2 imgMoon" src="../images/trending-up.svg" alt="trending-up">
+                    <div class=" pAdd">Сравнить</div>
 
                 </div>
             </div>
@@ -72,106 +77,106 @@
             <div class="exid">
 
                 <div class="exid_menu">
-                    <img class="ico3" src="../images/user.svg" alt="user">
-                    <div>Личный кабинет</div>
+                    <img class="ico3 imgMoon" src="../images/user.svg" alt="user">
+                    <div class="exidHover pAdd">Личный кабинет</div>
                 </div>
 
                 <div class="exid_menu">
-                    <img class="ico3" src="../images/moon.svg" alt="moon">
-                    <div>Темный режим</div>
+                    <img class="ico3 imgMoon" src="../images/moon.svg" alt="moon">
+                    <div class="exidHover pAdd" id="dark">Темный режим</div>
                 </div>
 
                 <div class="exid_menu">
-                    <img class="ico3" src="../images/settings.svg" alt="settings">
-                    <div>Настройки</div>
+                    <img class="ico3 imgMoon" src="../images/settings.svg" alt="settings">
+                    <div class="exidHover pAdd">Настройки</div>
                 </div>
 
                 <div class="exid_menu star">
                     <img class="ico3" src="../images/star.svg" alt="star">
-                    <div>Премиум</div>
+                    <div class="exidHover">Премиум</div>
                 </div>
 
 
                 <div class="exid_menu">
-                    <img class="ico3" src="../images/log-in.svg" alt="log-in">
-                    <div>Выйти</div>
+                    <img class="ico3 imgMoon" src="../images/log-in.svg" alt="log-in">
+                    <div class="exidHover pAdd">Выйти</div>
                 </div>
             </div>
         </div>
     </section>
     <section class="mainUnit">
-        <header>
-            <div class="newTask">
-                <img class="cross" src="../images/Group 1.svg" alt="Group 1">
+        <header class=" addClass">
+            <div class="newTask ">
+                <img class="cross " src="../images/Group 1.svg" alt="Group 1">
                 <p class="crossP">Новая задача</p>
             </div>
-            <img class="Times_of_Day" src="../images/moon.svg" alt="moon">
+            <img class="Times_of_Day imgMoon" src="../images/moon.svg" alt="moon">
             <div class="user">
-                <p class="userName">Хорошего дня, username</p>
+                <p class="userName pAdd">Хорошего дня, username</p>
                 <img class="userImg" src="../images/header__avatar.svg" alt="userImg">
 
-                <img class="JackdawImg" src="../images/header__user-menu.svg" alt="userMenu">
+                <img class="JackdawImg  imgMoon" src="../images/header__user-menu.svg" alt="userMenu">
             </div>
         </header>
         <div class="tasksMain">
             <div class="tasks">
-                <div class="successes">
+                <div class="successes addClass">
                     <div class="successestitleHeader">
                         <p class="successesTitle">Успехи за неделю</p>
                         <div class="ellipsis">
-                            <p class="ellipsisSpan"></p>
-                            <p class="ellipsisSpan"></p>
-                            <p class="ellipsisSpan"></p>
+                            <p class="ellipsisSpan pAddEleps"></p>
+                            <p class="ellipsisSpan pAddEleps"></p>
+                            <p class="ellipsisSpan pAddEleps"></p>
                         </div>
                     </div>
 
                     <div class="taskBoard">
                         <div class="taskBoard_1">
-                            <p class="taskBoardP">Создано</p>
-                            <div class="rangeOfTasks">
+                            <p class="taskBoardP pAdd">Создано</p>
+                            <div class="rangeOfTasks addClass">
                                 <div class="meaning"></div> <span class="meaning">113</span>
-                                <p class="taskBoardP">задач</p>
+                                <p class="taskBoardP pAdd">задач</p>
                             </div>
 
                         </div>
 
                         <div class="taskBoard_1">
-                            <p class="taskBoardP">Завершено</p>
-                            <div class="rangeOfTasks">
+                            <p class="taskBoardP pAdd">Завершено</p>
+                            <div class="rangeOfTasks addClass">
                                 <div class="meaning"></div> <span class="meaning">113</span>
-                                <p class="taskBoardP">задач</p>
+                                <p class="taskBoardP pAdd">задач</p>
                             </div>
 
                         </div>
 
                         <div class="taskBoard_1">
-                            <p class="taskBoardP">Удалено</p>
-                            <div class="rangeOfTasks">
+                            <p class="taskBoardP pAdd">Удалено</p>
+                            <div class="rangeOfTasks addClass">
                                 <div class="meaning"></div> <span class="meaning">113</span>
-                                <p class="taskBoardP">задач</p>
+                                <p class="taskBoardP pAdd">задач</p>
                             </div>
 
                         </div>
                     </div>
                 </div>
 
-                <div class="activeTasks">
+                <div class="activeTasks addClass">
                     <div class="successestitleHeader">
                         <p class="successesTitle">Активные задачи</p>
-                        <div class="ellipsis">
-                            <p class="ellipsisSpan"></p>
-                            <p class="ellipsisSpan"></p>
-                            <p class="ellipsisSpan"></p>
+                        <div class="ellipsis ">
+                            <p class="ellipsisSpan pAddEleps"></p>
+                            <p class="ellipsisSpan pAddEleps"></p>
+                            <p class="ellipsisSpan pAddEleps"></p>
                         </div>
                     </div>
                     <div class="checkСontainer">
                         <div class="check">
                             <input class="checkbox" type="checkbox">
-                            <p class="checkP">Приготовить вкусный ужин</p>
+                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
                         </div>
 
                         <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
                             <img src="../images/trash.svg" class="removalImg" alt="trash">
                         </div>
                     </div>
@@ -179,11 +184,11 @@
                     <div class="checkСontainer">
                         <div class="check">
                             <input class="checkbox" type="checkbox">
-                            <p class="checkP">Приготовить вкусный ужин</p>
+                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
                         </div>
 
                         <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
                             <img src="../images/trash.svg" class="removalImg" alt="trash">
                         </div>
                     </div>
@@ -191,11 +196,11 @@
                     <div class="checkСontainer">
                         <div class="check">
                             <input class="checkbox" type="checkbox">
-                            <p class="checkP">Приготовить вкусный ужин</p>
+                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
                         </div>
 
                         <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
                             <img src="../images/trash.svg" class="removalImg" alt="trash">
                         </div>
                     </div>
@@ -203,11 +208,11 @@
                     <div class="checkСontainer">
                         <div class="check">
                             <input class="checkbox" type="checkbox">
-                            <p class="checkP">Приготовить вкусный ужин</p>
+                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
                         </div>
 
                         <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
                             <img src="../images/trash.svg" class="removalImg" alt="trash">
                         </div>
                     </div>
@@ -220,11 +225,11 @@
                     <div class="checkСontainer">
                         <div class="check">
                             <input class="checkbox" type="checkbox">
-                            <p class="checkP">Приготовить вкусный ужин</p>
+                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
                         </div>
 
                         <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
                             <img src="../images/trash.svg" class="removalImg" alt="trash">
                         </div>
                     </div>
@@ -232,11 +237,11 @@
                     <div class="checkСontainer">
                         <div class="check">
                             <input class="checkbox" type="checkbox">
-                            <p class="checkP">Приготовить вкусный ужин</p>
+                            <p class="checkP pAdd">Приготовить вкусный ужин</p>
                         </div>
 
                         <div class="removal">
-                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/edit.svg" class="removalImg imgMoon" alt="edit">
                             <img src="../images/trash.svg" class="removalImg" alt="trash">
                         </div>
                     </div>
@@ -246,38 +251,39 @@
 
             </div>
             <section class="infoSection">
-                <div class="time">
+                <div class="time addClass">
                     <p class="timeP">Такс такс такс</p>
                     <div class="timeData">
                         <div class="timeDataBlock">
-                            <p class="timeDataP">На часах у нас</p>
-                            <img src="../images/clock.svg" class="timeClock" alt="clock">
-                            <span class="timeSpan timeJS">12:30:43</span>
+                            <p class="timeDataP pAdd">На часах у нас</p>
+                            <img src="../images/clock.svg" class="timeClock imgMoon" alt="clock">
+                            <span class="timeSpan timeJS pAdd">12:30:43</span>
                         </div>
                         <div class="timeDataBlock">
-                            <p class="timeDataP">А сегодня у нас</p>
-                            <img src="../images/calendar.svg" class="timeClock" alt="calendar">
-                            <span class="timeSpan spanJS">5 апреля 2021</span>
+                            <p class="timeDataP pAdd">А сегодня у нас</p>
+                            <img src="../images/calendar.svg" class="timeClock imgMoon" alt="calendar">
+                            <span class="timeSpan spanJS pAdd">5 апреля 2021</span>
                         </div>
                     </div>
                 </div>
 
-                <div class="containerObservation">
+                <div class="containerObservation addClass">
                     <div class="observation">
                         <p class="observationP">Наблюдение</p>
                         <div class="observationText">
-                            <p class="observationTextP">Больше всего задач вы создаете в Понедельник</p>
-                            <p class="observationTextP">Больше всего задач вы завершаете во Вторник</p>
+                            <p class="observationTextP pAdd">Больше всего задач вы создаете в Понедельник</p>
+                            <p class="observationTextP pAdd">Больше всего задач вы завершаете во Вторник</p>
                         </div>
 
                     </div>
                 </div>
 
-                <div class="containerObservation">
+                <div class="containerObservation addClass">
                     <div class="observation">
                         <p class="observationP">Факт дня</p>
                         <div class="observationText">
-                            <p class="observationTextP">Человек, который просыпается в 6 утра, по статистике, закрывает
+                            <p class="observationTextP pAdd">Человек, который просыпается в 6 утра, по статистике,
+                                закрывает
                                 все задачи к 18:00 вечера.<br>
                                 Попробуем также 🤔?</p>
 
@@ -286,13 +292,12 @@
                     </div>
                 </div>
 
-                <div class="containerObservation addition">
+                <div class="containerObservation addition addClass">
                     <div class="observation">
                         <p class="observationP">График успеваемости</p>
 
-
+                        <img src="../images/Line chart.png" class="observationImg ">
                     </div>
-                </div>
 
             </section>
         </div>
