--- a/index/userAccount.html
+++ b/index/userAccount.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <section class="menu">
-        <div class="menuNext">
+    <section class="menu addClass">
+        <div class="menuNext ">
             <div class="left_header">
 
                 <img id="logo" src="../images/logo.svg" alt="logo">
@@ -28,44 +28,49 @@
             <div class="categories">
                 <h1 class="h1">Категории</h1>
                 <div class="subcategory">
-                    <div><img class="ico" src="../images/home.svg" alt="home"> Дом</div>
+                    <img class="ico" src="../images/home.svg" alt="home">
+                    <div class="pAdd">Дом</div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <div><img class="ico" src="../images/users.svg" alt="users"> Семья</div>
+                    <img class="ico" src="../images/users.svg" alt="users">
+                    <div class="pAdd"> Семья</div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <div><img class="ico" src="../images/briefcase.svg" alt="briefcase"> Работа</div>
+                    <img class="ico" src="../images/briefcase.svg" alt="briefcase">
+                    <div class="pAdd "> Работа </div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <div><img class="ico" src="../images/zap.svg" alt="zap"> Спорт</div>
+                    <img class="ico" src="../images/zap.svg" alt="zap">
+                    <div class="pAdd ">Спорт </div>
+
                     <p class="illumination"></p>
                 </div>
 
                 <div class="addition">
                     <img class="ico1" src="../images/plus-square.svg" alt="plus-square">
-                    <div>Добавить</div>
+                    <div class="">Добавить</div>
 
                 </div>
             </div>
 
             <div class="data">
-                <h1 class="h_1">Данные</h1>
+                <h1 class="h_1 ">Данные</h1>
 
                 <div class="data1 data2">
                     <img class="ico2" src="../images/bar-chart-2.svg" alt="bar-chart-2">
-                    <div>Статистика</div>
+                    <div class=" pAdd">Статистика</div>
 
                 </div>
 
                 <div class="data1">
                     <img class="ico2" src="../images/trending-up.svg" alt="trending-up">
-                    <div>Сравнить</div>
+                    <div class=" pAdd">Сравнить</div>
 
                 </div>
             </div>
@@ -74,41 +79,41 @@
 
                 <div class="exid_menu">
                     <img class="ico3" src="../images/user.svg" alt="user">
-                    <div>Личный кабинет</div>
+                    <div class="exidHover pAdd">Личный кабинет</div>
                 </div>
 
                 <div class="exid_menu">
                     <img class="ico3" src="../images/moon.svg" alt="moon">
-                    <div>Темный режим</div>
+                    <div class="exidHover pAdd" id="dark">Темный режим</div>
                 </div>
 
                 <div class="exid_menu">
                     <img class="ico3" src="../images/settings.svg" alt="settings">
-                    <div>Настройки</div>
+                    <div class="exidHover pAdd">Настройки</div>
                 </div>
 
                 <div class="exid_menu star">
                     <img class="ico3" src="../images/star.svg" alt="star">
-                    <div>Премиум</div>
+                    <div class="exidHover">Премиум</div>
                 </div>
 
 
                 <div class="exid_menu">
                     <img class="ico3" src="../images/log-in.svg" alt="log-in">
-                    <div>Выйти</div>
+                    <div class="exidHover pAdd">Выйти</div>
                 </div>
             </div>
         </div>
     </section>
     <section class="mainUnit">
-        <header>
+        <header class="addClass">
             <div class="newTask">
                 <img class="cross" src="../images/Group 1.svg" alt="Group 1">
                 <p class="crossP">Новая задача</p>
             </div>
             <img class="Times_of_Day" src="../images/moon.svg" alt="moon">
             <div class="user">
-                <p class="userName">Хорошего дня, username</p>
+                <p class="userName pAdd">Хорошего дня, username</p>
                 <img class="userImg" src="../images/header__avatar.svg" alt="userImg">
 
                 <img class="JackdawImg" src="../images/header__user-menu.svg" alt="userMenu">
@@ -116,7 +121,7 @@
         </header>
         <div class="tasksMain">
             <div class="tasks">
-                <div class="tasksUser">
+                <div class="tasksUser addClass">
                     <div class="tasksUserOne">
                         <img src="../images/header__avatar.png" class="tasksUserPhoto" alt="UserPhoto">
                         <a src="#" class="tasksUserInput">изменить фото</a>
@@ -126,18 +131,18 @@
 
                         <form class="UserForm">
                             <div class="">
-                                <p class="UserFormP">Ваш никнейм:</p>
+                                <p class="UserFormP pAdd">Ваш никнейм:</p>
                                 <input type="text" class="UserFormInput" value="" placeholder="username">
                             </div>
                             <div class="UserFormContainer">
-                                <p class="UserFormP">Ваша почта:</p>
+                                <p class="UserFormP pAdd">Ваша почта:</p>
                                 <input type="email" class="UserFormInput" placeholder="username@email.com">
                                 <input type="checkbox" name="scales" class="UserCheckbox">
-                                <label for="scales">Подписаться на рассылку</label>
+                                <label class="pAdd" for="scales">Подписаться на рассылку</label>
                             </div>
 
                             <div class="UserFormContainer">
-                                <p class="UserFormP">Ваши социальные сети:</p>
+                                <p class="UserFormP pAdd">Ваши социальные сети:</p>
                                 <a src="" class=""><img src="../images/facebook 1.svg" class="img_network"
                                         alt="Group"></a>
                                 <a src="" class=""><img src="../images/Group.svg" class="img_network imgNet "
@@ -154,38 +159,38 @@
                 <div class="subscription">
                     <p class="subscriptionP">Оформить премиум подписку</p>
                 </div>
-                <div class="time">
+                <div class="time addClass">
                     <p class="timeP">Такс такс такс</p>
                     <div class="timeData">
                         <div class="timeDataBlock">
-                            <p class="timeDataP">На часах у нас</p>
+                            <p class="timeDataP pAdd">На часах у нас</p>
                             <img src="../images/clock.svg" class="timeClock" alt="clock">
-                            <span class="timeSpan timeJS">12:30:43</span>
+                            <span class="timeSpan timeJS pAdd">12:30:43</span>
                         </div>
                         <div class="timeDataBlock">
-                            <p class="timeDataP">А сегодня у нас</p>
+                            <p class="timeDataP pAdd">А сегодня у нас</p>
                             <img src="../images/calendar.svg" class="timeClock" alt="calendar">
-                            <span class="timeSpan spanJS">5 апреля 2021</span>
+                            <span class="timeSpan spanJS pAdd">5 апреля 2021</span>
                         </div>
                     </div>
                 </div>
 
-                <div class="containerObservation">
+                <div class="containerObservation addClass">
                     <div class="observation">
                         <p class="observationP">Наблюдение</p>
                         <div class="observationText">
-                            <p class="observationTextP">Больше всего задач вы создаете в Понедельник</p>
-                            <p class="observationTextP">Больше всего задач вы завершаете во Вторник</p>
+                            <p class="observationTextP pAdd">Больше всего задач вы создаете в Понедельник</p>
+                            <p class="observationTextP pAdd">Больше всего задач вы завершаете во Вторник</p>
                         </div>
 
                     </div>
                 </div>
 
-                <div class="containerObservation">
+                <div class="containerObservation addClass">
                     <div class="observation">
                         <p class="observationP">Факт дня</p>
                         <div class="observationText">
-                            <p class="observationTextP">Человек, который просыпается в 6 утра, по статистике,
+                            <p class="observationTextP pAdd">Человек, который просыпается в 6 утра, по статистике,
                                 закрывает
                                 все задачи к 18:00 вечера.<br>
                                 Попробуем также 🤔?</p>
@@ -203,6 +208,7 @@
 
     <script src="../js/timeData.js"></script>
     <script src="../js/mainPage.js"></script>
+    <script src="../js/userAccount.js"></script>
 </body>
 
 </html>
