modifying_the_modal

--- a/index/userAccount.html
+++ b/index/userAccount.html
@@ -28,25 +28,25 @@
             <div class="categories">
                 <h1 class="h1">Категории</h1>
                 <div class="subcategory">
-                    <img class="ico" src="../images/home.svg" alt="home">
+                    <img class="ico imgMoon" src="../images/home.svg" alt="home">
                     <div class="pAdd">Дом</div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <img class="ico" src="../images/users.svg" alt="users">
+                    <img class="ico imgMoon" src="../images/users.svg" alt="users">
                     <div class="pAdd"> Семья</div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <img class="ico" src="../images/briefcase.svg" alt="briefcase">
+                    <img class="ico imgMoon" src="../images/briefcase.svg" alt="briefcase">
                     <div class="pAdd "> Работа </div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
-                    <img class="ico" src="../images/zap.svg" alt="zap">
+                    <img class="ico imgMoon" src="../images/zap.svg" alt="zap">
                     <div class="pAdd ">Спорт </div>
 
                     <p class="illumination"></p>
@@ -63,13 +63,13 @@
                 <h1 class="h_1 ">Данные</h1>
 
                 <div class="data1 data2">
-                    <img class="ico2" src="../images/bar-chart-2.svg" alt="bar-chart-2">
+                    <img class="ico2 imgMoon" src="../images/bar-chart-2.svg" alt="bar-chart-2">
                     <div class=" pAdd">Статистика</div>
 
                 </div>
 
                 <div class="data1">
-                    <img class="ico2" src="../images/trending-up.svg" alt="trending-up">
+                    <img class="ico2 imgMoon" src="../images/trending-up.svg" alt="trending-up">
                     <div class=" pAdd">Сравнить</div>
 
                 </div>
@@ -78,17 +78,17 @@
             <div class="exid">
 
                 <div class="exid_menu">
-                    <img class="ico3" src="../images/user.svg" alt="user">
+                    <img class="ico3 imgMoon" src="../images/user.svg" alt="user">
                     <div class="exidHover pAdd">Личный кабинет</div>
                 </div>
 
                 <div class="exid_menu">
-                    <img class="ico3" src="../images/moon.svg" alt="moon">
+                    <img class="ico3 imgMoon" src="../images/moon.svg" alt="moon">
                     <div class="exidHover pAdd" id="dark">Темный режим</div>
                 </div>
 
                 <div class="exid_menu">
-                    <img class="ico3" src="../images/settings.svg" alt="settings">
+                    <img class="ico3 imgMoon" src="../images/settings.svg" alt="settings">
                     <div class="exidHover pAdd">Настройки</div>
                 </div>
 
@@ -99,7 +99,7 @@
 
 
                 <div class="exid_menu">
-                    <img class="ico3" src="../images/log-in.svg" alt="log-in">
+                    <img class="ico3 imgMoon" src="../images/log-in.svg" alt="log-in">
                     <div class="exidHover pAdd">Выйти</div>
                 </div>
             </div>
@@ -111,12 +111,12 @@
                 <img class="cross" src="../images/Group 1.svg" alt="Group 1">
                 <p class="crossP">Новая задача</p>
             </div>
-            <img class="Times_of_Day" src="../images/moon.svg" alt="moon">
+            <img class="Times_of_Day imgMoon" src="../images/moon.svg" alt="moon">
             <div class="user">
                 <p class="userName pAdd">Хорошего дня, username</p>
                 <img class="userImg" src="../images/header__avatar.svg" alt="userImg">
 
-                <img class="JackdawImg" src="../images/header__user-menu.svg" alt="userMenu">
+                <img class="JackdawImg imgMoon" src="../images/header__user-menu.svg" alt="userMenu">
             </div>
         </header>
         <div class="tasksMain">
@@ -164,12 +164,12 @@
                     <div class="timeData">
                         <div class="timeDataBlock">
                             <p class="timeDataP pAdd">На часах у нас</p>
-                            <img src="../images/clock.svg" class="timeClock" alt="clock">
+                            <img src="../images/clock.svg" class="timeClock imgMoon" alt="clock">
                             <span class="timeSpan timeJS pAdd">12:30:43</span>
                         </div>
                         <div class="timeDataBlock">
                             <p class="timeDataP pAdd">А сегодня у нас</p>
-                            <img src="../images/calendar.svg" class="timeClock" alt="calendar">
+                            <img src="../images/calendar.svg" class="timeClock imgMoon" alt="calendar">
                             <span class="timeSpan spanJS pAdd">5 апреля 2021</span>
                         </div>
                     </div>
