--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -28,25 +28,25 @@
                 <h1 class="h1">Категории</h1>
                 <div class="subcategory">
                     <img class="ico imgMoon" src="../images/home.svg" alt="home">
-                    <div class="pAdd">Дом</div>
-                    <p class="illumination"></p>
+                    <div class="pAdd mark">Дом</div>
+                    <p style="display: block;" class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
                     <img class="ico imgMoon" src="../images/users.svg" alt="users">
-                    <div class="pAdd"> Семья</div>
+                    <div class="pAdd mark"> Семья</div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
                     <img class="ico imgMoon" src="../images/briefcase.svg" alt="briefcase">
-                    <div class="pAdd "> Работа </div>
+                    <div class="pAdd mark"> Работа </div>
                     <p class="illumination"></p>
                 </div>
 
                 <div class="subcategory">
                     <img class="ico imgMoon" src="../images/zap.svg" alt="zap">
-                    <div class="pAdd ">Спорт </div>
+                    <div class="pAdd mark">Спорт </div>
 
                     <p class="illumination"></p>
                 </div>
